
LDAPMapper:
----------------------
* Email mapper that uses an LDAP lookup to determine user email addresses (CC-413). Submitted by Esa Laine.Email mapper that uses an LDAP lookup to determine user email addresses (CC-413). Submitted by Esa Laine.

UCM:
----------------------
* Add property attribute that gets set if modifications are found (CC-421). Patch by Scott Coplin.

reporting application
======================
* Fix for JMX collection view and paging (CC-394). Patch by Tim Shadel.
* Added web.xml parameter for cruisecontrol.jmxport, which can be overridden by the environment variable as documented in web.xml.

fittests.xsl
----------------------
* Display all fit results, not just the first one (CC-415). Patch by Randy Coulman.

CruiseControl Release Notes - 2.4.1

contrib
======================
* add option for XmlLoggerWithStatus to ignore certain targets (CC-259). Patch by Brad Clarke
* add cross-platform JavaServiceWrapper (CC-87). Submitted by Eric Pugh

build loop
======================

configxml.html:
----------------------
* Fix broken links to the puligin classes' javadoc
* cvs was renamed ConcurrentVersionsSystem

CruiseControlController:
----------------------
* Properly remove projects when appropriate on setConfigFile() (CC-408). Patch by Matt Albrecht

CruiseControlControllerJMXAdaptor:
----------------------
* Notify listeners on projects added/removed (CC-409). Patch by Matt Albrecht

ExecBuilder:
----------------------
* New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee

HTMLEmailPublisher:
----------------------
* add option to pass XSLT parameters to the XSL stylesheets used.

JMX interface:
----------------------
* Sort arrays and collections by their index's numeric value (CC-232). Patch by Valdis Rigdon

Maven2Builder:
----------------------
* Add new builder for Maven2 (CC-363). Submitted by De Moor Yves. Tested, documented and patched by Dan Rollo.

Project:
----------------------